Replace LoginController implementation of generated code with HttpURLConnection